--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ PROJECT(pixelnebula)
 set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
 find_package(glfw3 REQUIRED)
 ADD_EXECUTABLE(pixelnebula pixelnebula.cpp)
-message(STATUS "HOOO ${GLFW3_INCLUDE_DIR}")
-get_cmake_property(_variableNames VARIABLES)
-foreach (_variableName ${_variableNames})
-        message(STATUS "${_variableName}=${${_variableName}}")
-endforeach()
+target_link_libraries(pixelnebula glfw)
+#get_cmake_property(_variableNames VARIABLES)
+#foreach (_variableName ${_variableNames})
+#        message(STATUS "${_variableName}=${${_variableName}}")
+#endforeach()
