--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.6)
 PROJECT(pixelnebula)
 set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
+if (WIN32)
+	set ( glfw3_DIR "C:\\Users\\gentili\\AppData\\Local\\CMakeBuild\\b58d18a0-84a9-8631-9016-f4ea15a8fbd2\\build\\install\\lib\\cmake\\glfw3\\" )
+endif()
 find_package(glfw3 REQUIRED)
 ADD_EXECUTABLE(pixelnebula pixelnebula.cpp)
 target_link_libraries(pixelnebula glfw)
-#get_cmake_property(_variableNames VARIABLES)
-#foreach (_variableName ${_variableNames})
-#        message(STATUS "${_variableName}=${${_variableName}}")
-#endforeach()
