--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ ADD_EXECUTABLE(pixelnebula pixelnebula.cpp
     Axis.h Axis.cpp 
     PointStar.h PointStar.cpp
     DoublePointStar.h
+    GlowSphere.h GlowSphere.cpp
     ${DEPS})
 set_property(TARGET pixelnebula PROPERTY CXX_STANDARD 11)
 target_link_libraries(pixelnebula glfw)
