Add skeleton of Nebula

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ ADD_EXECUTABLE(pixelnebula pixelnebula.cpp
     PointStar.h PointStar.cpp
     DoublePointStar.h
     GlowSphere.h GlowSphere.cpp
+    Nebula.h Nebula.cpp
     ${DEPS})
 set_property(TARGET pixelnebula PROPERTY CXX_STANDARD 11)
 target_link_libraries(pixelnebula glfw)
