--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,17 +1,15 @@
-{
+﻿{
   "configurations": [
     {
-      "name": "x64-Release",
-      "generator": "Visual Studio 15 2017 Win64",
-      "buildRoot": "${env.LOCALAPPDATA}\\CMakeBuild\\${workspaceHash}\\build\\${name}",
-      "configurationType": "Release",
+      "name": "x64-Debug",
+      "generator": "Ninja",
+      "configurationType": "Debug",
+      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
-      "variables": [
-        {
-          "name": "glfw3_DIR",
-          "value": "C:\\Users\\genti\\AppData\\Local\\CMakeBuild\\2f211ddc-b8e9-0d3e-ab30-54e883582379\\build\\install\\lib\\cmake\\glfw3\\"
-        }
-      ]
+      "buildCommandArgs": "",
+      "ctestCommandArgs": ""
     }
   ]
 }
